# gtri

./: CLAUDE.md  README.md  gtri  pyproject.toml
.github/workflows/: ci.yml  claude.yml
src/gtri/: __init__.py  __main__.py  cli.py  commands.py  exec.py  output.py  picker.py  pr.py  search.py  worktree.py
tests/: test_cli.py  test_commands.py  test_exec.py  test_picker.py  test_pr.py  test_search.py  test_worktree.py
