[project]
name = "gtri"
version = "0.1.0"
description = "Interactive wrapper for git gtr with fuzzy worktree selection"
readme = "README.md"
authors = [
    { name = "Dustin Wyatt", email = "dustin.wyatt@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "rich>=14.3.3",
    "textual>=8.0.0",
]

[project.scripts]
gtri = "gtri.cli:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "radon>=6.0.1",
]
